objects/Standard_Goal_Detail_Pacing__c.object
<CustomObject>
    <description>These records are created generally through the Define Standards VF, and represent the allocation of a given Goal Template Detail across multiple periods. This distribution is represented by a percentage assignment to each record, the total of which should equate to 100 (however, there is no requirement that period allocations equal 100).</description>
    <fields>
        <fullName>Amount_Manual__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Standard_Goal_Detail__r.Amount__c * Percent_Manual__c</formula>
        <label>Calculated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Manual__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>Standard_Goal_Detail__r.Count__c * Percent_Manual__c</formula>
        <label>Calculated Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SGDP{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Manual__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <formula>Standard_Goal_Detail__r.Percent__c * Percent_Manual__c</formula>
        <label>Calculated Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Goal_Detail__c</fullName>
        <label>Goal Template Detail</label>
        <referenceTo>Standard_Goal_Detail__c</referenceTo>
        <relationshipLabel>Goal Template Details Pacing</relationshipLabel>
        <relationshipName>Standard_Goal_Details_Pacing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Template</label>
        <referenceTo>Standard_Goal__c</referenceTo>
        <relationshipLabel>Goal Template Details Pacing</relationshipLabel>
        <relationshipName>Standard_Goal_Details_Pacing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF( 
	AND(NOT(ISNULL(Amount__c)),Amount__c &gt; 0) ,
	TEXT(Amount__c),
	&apos;&apos;
)
+
IF(
	AND(NOT(ISNULL(Count__c)),Count__c &gt; 0),
	TEXT(Count__c),
	&apos;&apos;
)
+
IF(
	AND(NOT(ISNULL(Percent__c)),Percent__c &gt; 0),
	TEXT(Percent__c * 100) + &apos;%&apos;,
	&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Goal Template Detail Pacing</label>
    <nameField>
        <label>Goal Template Detail Pacing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Template Details Pacing</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Every record starts here</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Dates</fullName>
        <active>true</active>
        <description>The Start date cannot be later than the End date.</description>
        <errorConditionFormula>Period_Start__c  &gt;  Period_End__c</errorConditionFormula>
        <errorDisplayField>Period_Start__c</errorDisplayField>
        <errorMessage>The Start date cannot be later than the End date.</errorMessage>
    </validationRules>
</CustomObject>